fixing the top clickies to not get cut off

--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ a {
   text-decoration: none;
   display: flex;
   align-items: center;
-  padding: 0 15px;
+  padding: 0 10px;
   height: 80px;
   box-sizing: border-box;
 }
